procps-3.2.1 --> procps-3.2.2

new packager (downstream maintainer) guidelines in README
move striping from install command to CFLAGS
new gcc options in use: -fweb, -frename-registers, etc.
avoid warning about -lncurses when not linking -- thanks FLWM
tolerate IA-64 headers without PAGE_SIZE
ps: k option, same as --sort
ps: personality-specific -x support (HP-UX and SVR4-MP)
pgrep: man page SEE ALSO updated                    #226817
sysctl: -q and -N options
sysctl: better error handling of failed writes
top: tolerate sparse CPU numbering
top: try to handle terminals lacking rmam and smam     #235003
top: xterm dislikes clear-to-eol at eol (char lost)
vmstat: fixed -d
watch: allow sub-second intervals -- thanks Thomas Stewart

procps-3.2.0 --> procps-3.2.1

build even w/ curses in an odd location -- thanks to Segher Boessenkool
ps: STAT flags for fg process group and session leader
ps: STAT flags for swapped out process dropped (was broken)
ps: new -M and Z options for security data (SE Linux, etc.)
slabtop: detect broken /proc/slabinfo -- thanks to Fabian Frederick
slabtop: ensure that error messages show up on the screen -- FF again

procps-3.1.15 --> procps-3.2.0

build on IA-64 again                            #227933
pmap: output like Solaris 9, not Solaris 7
ps: also handle SELinux on the 2.4.xx kernels
top: during a ^Z, the terminal was messed up     #228822
future-proof the tty handling   (thanks to Zhou Wei)
slabtop  (Chris Rivera and Robert Love)          #226778
pmap: detect the primary stack
pmap: -d format
free: report high and low memory

procps-3.1.14 --> procps-3.1.15

install to /lib64 if it exists
hide kernel PID bug (Linux 2.4.13-pre1 to 2.4.MAX)   #217278 #219730 #217525 #224470
ps: faster threaded display
top: auto-margin problem                           #217559
ps: support NSA SELinux, all builds, Linux 2.6+    #193648
sysctl: tweak man page for ESR's broken parser

procps-3.1.13 --> procps-3.1.14
